@@ -689,6 +689,8 @@ void DateTimeTestCase::TestTimeSpanFormat()
         { 12, 34, 56, 789, _T("%H:%M:%S.%l"),   _T("12:34:56.789")          },
         {  1,  2,  3,   0, _T("%H:%M:%S"),      _T("01:02:03")              },
         {  1,  2,  3,   0, _T("%S"),            _T("3723")                  },
+        { -1, -2, -3,   0, _T("%S"),            _T("-3723")                 },
+        { -1, -2, -3,   0, _T("%H:%M:%S"),      _T("-01:02:03")             },
     };
 
     for ( size_t n = 0; n < WXSIZEOF(testSpans); n++ )
